--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,9 +19,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
+      run: mvn compile
     
   security-check:
-
     runs-on: ubuntu-latest
     needs: compile
 
