--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,17 +2,14 @@ name: Java CI with Maven
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
   compile:
-    name: Compile Application
     runs-on: self-hosted
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -21,44 +18,43 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Maven Compile
-        run: mvn clean compile
+      - name: Build with Maven
+        run: mvn compile
 
   security-check:
-    name: Security Scan (Trivy & Gitleaks)
     runs-on: self-hosted
     needs: compile
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Install Trivy
+      - name: Trivy Installation
         run: |
           sudo apt-get update -y
           sudo apt-get install -y wget gnupg
-          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | gpg --dearmor | sudo tee /usr/share/keyrings/trivy.gpg > /dev/null
-          echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb generic main" | sudo tee /etc/apt/sources.list.d/trivy.list
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key \
+          | gpg --dearmor \
+          | sudo tee /usr/share/keyrings/trivy.gpg > /dev/null
+          echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb generic main" \
+          | sudo tee /etc/apt/sources.list.d/trivy.list
           sudo apt-get update -y
           sudo apt-get install -y trivy
 
-      - name: Trivy File System Scan
-        run: trivy fs . --format json --output trivy-fs-report.json
+      - name: Trivy Fs Scan
+        run: trivy fs --format table -o fs-report.json .
 
-      - name: Install Gitleaks
-        run: sudo apt-get install -y gitleaks
+      - name: Gitleaks Installation
+        run: sudo apt install gitleaks -y
 
-      - name: Gitleaks Secret Scan
+      - name: Gitleaks Code Scan
         run: gitleaks detect --source . --report-path gitleaks-report.json --report-format json
 
-  unit-tests:
-    name: Unit Test Execution
+  unit-test:
     runs-on: self-hosted
     needs: security-check
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -67,5 +63,5 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Run Unit Tests
+      - name: Unit Test Cases
         run: mvn test
