--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,14 +2,17 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   compile:
+    name: Compile Application
     runs-on: self-hosted
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -18,43 +21,44 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven
-        run: mvn compile
+      - name: Maven Compile
+        run: mvn clean compile
 
   security-check:
+    name: Security Scan (Trivy & Gitleaks)
     runs-on: self-hosted
     needs: compile
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Trivy Installation
+      - name: Install Trivy
         run: |
           sudo apt-get update -y
           sudo apt-get install -y wget gnupg
-          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key \
-          | gpg --dearmor \
-          | sudo tee /usr/share/keyrings/trivy.gpg > /dev/null
-          echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb generic main" \
-          | sudo tee /etc/apt/sources.list.d/trivy.list
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | gpg --dearmor | sudo tee /usr/share/keyrings/trivy.gpg > /dev/null
+          echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb generic main" | sudo tee /etc/apt/sources.list.d/trivy.list
           sudo apt-get update -y
           sudo apt-get install -y trivy
 
-      - name: Trivy Fs Scan
-        run: trivy fs --format table -o fs-report.json .
+      - name: Trivy File System Scan
+        run: trivy fs . --format json --output trivy-fs-report.json
 
-      - name: Gitleaks Installation
-        run: sudo apt install gitleaks -y
+      - name: Install Gitleaks
+        run: sudo apt-get install -y gitleaks
 
-      - name: Gitleaks Code Scan
+      - name: Gitleaks Secret Scan
         run: gitleaks detect --source . --report-path gitleaks-report.json --report-format json
 
-  unit-test:
+  unit-tests:
+    name: Unit Test Execution
     runs-on: self-hosted
     needs: security-check
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -63,5 +67,5 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Unit Test Cases
+      - name: Run Unit Tests
         run: mvn test
